--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1 style="text-align:center;">Know more about me</h1>
 
 <!-- Adjectives -->
-<p style="text-align:center;">Adjective 1 | Adjective 2 | Adjective 3</p>
+<p style="text-align:center;">Friendly| Honest | funny</p>
 
 <!-- Section title -->
 <h2 style="text-align:center;">Personal Information</h2>
